k8s/argocd/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: argocd
  hostnames:
    - argocd.as212024.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - group: ""
          kind: Service
          name: argocd-server
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-applicationset-controller
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: argocd
  hostnames:
    - argocd-appset.as212024.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/api/webhook"
      backendRefs:
        - group: ""
          kind: Service
          name: argocd-applicationset-controller
          port: 7000
